// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should apply classnames from props correctly 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="portal-class"
  >
    <div
      class="Modal__overlay overlay-class Modal__overlay--entered"
    >
      <div
        aria-label="Content label"
        class="Modal__content content-class Modal__content--entered"
        role="dialog"
        tabindex="-1"
      >
        Some children
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal should render correctly 1`] = `
<body
  class="Modal__body"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="Modal__overlay Modal__overlay--entered"
    >
      <div
        aria-label="Content label"
        class="Modal__content Modal__content--entered"
        role="dialog"
        tabindex="-1"
      >
        Some children
      </div>
    </div>
  </div>
</body>
`;
